--- a/renderer/package.json
+++ b/renderer/package.json
@@ -6,6 +6,7 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-quill": "^1.3.3",
     "react-scripts": "2.1.8"
   },
   "scripts": {
